kubernetes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-dvwa
spec: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-dvwa-db
  namespace: web-dvwa
spec:
  selector:
    matchLabels:
      app: web-dvwa-db
  template:
    metadata:
      labels:
        app: web-dvwa-db
    spec:
      containers:
      - name: web-dvwa-db
        image: docker.io/library/mariadb:10
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: web-dvwa-db-svc
  namespace: web-dvwa
spec:
  selector:
    app: web-dvwa-db
  ports:
  - port: 3306
    targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-dvwa-web
  namespace: web-dvwa
spec:
  selector:
    matchLabels:
      app: web-dvwa-web
  template:
    metadata:
      labels:
        app: web-dvwa-web
    spec:
      volumes:
        - name: create-db
          secret:
            secretName: create-db
      containers:
      - name: web-dvwa-web
        image: gulacedia/web-dvwa-new:v3
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-dvwa-service
  namespace: web-dvwa
spec:
  selector:
    app: web-dvwa-web
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: web-dvwa-gateway
  namespace: web-dvwa
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "web-dvwa.example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-dvwa
  namespace: web-dvwa
spec:
  hosts:
  - "web-dvwa.example.com"
  gateways:
  - web-dvwa-gateway
  http:
  - route:
    - destination:
        port:
          number: 80
        host: web-dvwa-service
